--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,9 @@
-<h2 id="title">Welcome to Ember</h2>
+<header>
+  Yabbit
+</header>
 
-{{outlet}}
+<!--<div class="url">URL: {{target.url}}</div>-->
+
+<div id="main">
+  {{outlet}}
+</div>
