--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,7 @@
 <header>
-  Yabbit
+  <div class="container">
+    {{#link-to 'index'}}<img id="logo" src="assets/logo.png"/>{{/link-to}}
+  </div>
 </header>
 
 <!--<div class="url">URL: {{target.url}}</div>-->
