--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,5 @@
-Login:
+<div id="loginbox">
+  TODO: Login
+</div>
 
-{{outlet}}
-
-{{#link-to 'patients'}}Okay{{/link-to}}
+{{#link-to 'patients'}}Skip for now{{/link-to}}
