--- a/app/templates/patients/index/show.hbs
+++ b/app/templates/patients/index/show.hbs
@@ -2,9 +2,9 @@
 
   <table>
     <thead>
-      <th>Challenge Completion</th>
-      <th>Health Risk</th>
-      <th>Activity Level</th>
+      <th class="challenge-completion">Challenge Completion</th>
+      <th class="health-risk">Health Risk</th>
+      <th class="activity-level">Activity Level</th>
     </thead>
     <tbody>
       <tr>
