--- a/app/templates/patients/index.hbs
+++ b/app/templates/patients/index.hbs
@@ -8,4 +8,31 @@
   </ul>
 </aside>
 
+<div id="patients-overview">
+  <table>
+    <thead>
+      <th class="challenge-completion">Challenge Completion</th>
+      <th class="health-risk">Health Risk</th>
+      <th class="activity-level">Activity Level</th>
+    </thead>
+    <tbody>
+      {{#each model as |patient|}}
+        <tr>
+          <td>
+            <div class="bar fitness" style="width: {{patient.challengeCompletion.fitness}}%">{{patient.challengeCompletion.fitness}}%</div>
+            <div class="bar diet" style="width: {{patient.challengeCompletion.diet}}%">{{patient.challengeCompletion.diet}}%</div>
+            <div class="bar stress" style="width: {{patient.challengeCompletion.stress}}%">{{patient.challengeCompletion.stress}}%</div>
+          </td>
+          <td>
+            {{patient.healthRisk.status}}<br />
+          </td>
+          <td>
+            {{patient.activityLevel.status}}<br />
+          </td>
+        </tr>
+      {{/each}}
+    </tbody>
+  </table>
+</div>
+
 {{outlet 'detail'}}
