add patient View All button

--- a/app/styles/_variables.sass
+++ b/app/styles/_variables.sass
@@ -2,6 +2,10 @@
 
 $padding: 10px
 
+$sidebar_width: 200px
+
+$table_head_height: 30px
+
 /* BACKGROUNDS */
 
 $heading_bg: linear-gradient(#f9f9f9, #e6e6e6)
