--- a/app/styles/_variables.sass
+++ b/app/styles/_variables.sass
@@ -1,10 +1,13 @@
 /* LAYOUT */
 
 $padding: 10px
+$margin: 5px
 
-$sidebar_width: 200px
+$sidebar_width: 300px
 
 $table_head_height: 30px
+
+$row_height: 50px
 
 /* BACKGROUNDS */
 
