style login page

--- a/app/styles/_variables.sass
+++ b/app/styles/_variables.sass
@@ -16,3 +16,22 @@ $heading_bg: linear-gradient(#f9f9f9, #e6e6e6)
 /* DIVISIONS */
 
 $border: 1px solid #ccc
+
+/* BUTTONS */
+
+/* Nav Button */
+$nav_button_bg: #3DB549
+$nav_button_bg_hover: #54cc60
+
+.nav-button
+  color: white !important
+  background: $nav_button_bg
+  text-decoration: none
+  font-size: 1.2em
+  padding: 7px 10px
+  display: inline-block
+  border: none
+  border-radius: 5px
+  &:hover
+    background: $nav_button_bg_hover
+    cursor: pointer
