--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,7 @@
-<div id="loginbox">
-  TODO: Login
+<div id="login">
+  <input id="email" type="text" placeholder="Email"/>
+  <input id="password" type="password" placeholder="Password"/>
+  <input type="submit" value="Login"/>
 </div>
 
 {{#link-to 'patients'}}Skip for now{{/link-to}}
