--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,4 +1,5 @@
 @import '_variables.sass'
+@import '_forms.sass'
 
 /******************************************************************************
  * Render Config *
@@ -18,6 +19,7 @@ body
 /******************************************************************************
  * LAYOUT *
  ******************************************************************************/
+
 .container, #main
   max-width: 1200px
   margin: 0 auto
@@ -61,11 +63,11 @@ a.button
 
 /* Login */
 
-#loginbox
+#login
   padding: 10px
-  border: 1px solid #ccc
-  border-radius: 4px
+  border: $border
   max-width: $sidebar_width
+  border-radius: 4px
   margin: 10px auto
 
 /* Patients */
