--- a/app/styles/_forms.sass
+++ b/app/styles/_forms.sass
@@ -32,3 +32,5 @@ input[type="submit"]
     &[type="text"],
     &[type="password"]
       margin-bottom: $margin
+    &[type="submit"]
+      margin-top: $margin * 2
