add session controller

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -61,9 +61,9 @@ a.button
  * SECTIONS *
  ******************************************************************************/
 
-/* Login */
+/* Session */
 
-#login
+#session
   padding: 10px
   border: $border
   max-width: $sidebar_width
