--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,3 @@
-<div id="login">
-  <input id="email" type="text" placeholder="Email"/>
-  <input id="password" type="password" placeholder="Password"/>
-  <input type="submit" value="Login"/>
-</div>
+{{outlet}}
 
 {{#link-to 'patients'}}Skip for now{{/link-to}}
