style session tabs

--- a/app/styles/_variables.sass
+++ b/app/styles/_variables.sass
@@ -1,23 +1,41 @@
-/* LAYOUT */
+/******************************************************************************
+ * TEXT
+ *****************************************************************************/
 
+/* Colors */
+$text_color: #333
+$help_text_color: #AAA
+$link_color: #0E4E8B
+
+/******************************************************************************
+ * LAYOUT
+ *****************************************************************************/
+
+/* Spacing */
 $padding: 10px
 $margin: 5px
 
+/* Widths */
 $sidebar_width: 300px
-
 $table_head_height: 40px
 
+/* Heights */
 $row_height: 60px
 
-/* BACKGROUNDS */
-
-$heading_bg: linear-gradient(#f9f9f9, #e6e6e6)
-
-/* DIVISIONS */
-
+/* Borders */
 $border: 1px solid #ccc
 
-/* BUTTONS */
+/******************************************************************************
+ * BACKGROUNDS
+ *****************************************************************************/
+
+$heading_bg: linear-gradient(#f9f9f9, #e6e6e6)
+$action_button_bg: linear-gradient(#FFF, #E5E5E5)
+$action_button_bg_hover: linear-gradient(#E5E5E5, #FFF)
+
+/******************************************************************************
+ * BUTTONS
+ *****************************************************************************/
 
 /* Nav Button */
 $nav_button_bg: #3DB549
@@ -35,3 +53,10 @@ $nav_button_bg_hover: #54cc60
   &:hover
     background: $nav_button_bg_hover
     cursor: pointer
+
+/******************************************************************************
+ * MENUS
+ *****************************************************************************/
+
+/* Radio Tabs */
+$radiotabs_height: 50px
