--- a/app/templates/session/login.hbs
+++ b/app/templates/session/login.hbs
@@ -1,3 +1,4 @@
 <input id="email" type="text" placeholder="Email"/>
 <input id="password" type="password" placeholder="Password"/>
-<input type="submit" value="Login"/>
+
+<button type="submit">Login</button>
