--- a/app/templates/session/signup.hbs
+++ b/app/templates/session/signup.hbs
@@ -1,4 +1,5 @@
 <input id="email" type="text" placeholder="Email"/>
 <input id="password" type="password" placeholder="Password"/>
 <input id="password2" type="password" placeholder="Confirm Password"/>
-<input type="submit" value="Signup"/>
+
+<button type="submit" {{action 'signup'}}>Signup</button>
