slow progress with parse

--- a/app/templates/session/signup.hbs
+++ b/app/templates/session/signup.hbs
@@ -1,7 +1,7 @@
 <form>
-  {{input value=model.username id="username" placeholder="Username"}}
-  {{input value=model.email id="email" placeholder="Email"}}
-  {{input value=model.password id="password" placeholder="Password"}}
+  {{input value=username id="username" placeholder="Username"}}
+  {{input value=email id="email" placeholder="Email"}}
+  {{input value=password id="password" placeholder="Password"}}
 
   <button type="submit" {{action 'signup' model}}>Signup</button>
 </form>
