fixing parse adapter
https://github.com/clintjhill/ember-parse-adapter/issues/102#issuecommen
t-141763164

--- a/app/templates/session/signup.hbs
+++ b/app/templates/session/signup.hbs
@@ -3,5 +3,5 @@
   {{input value=email id="email" placeholder="Email"}}
   {{input value=password id="password" placeholder="Password"}}
 
-  <button type="submit" {{action 'signup' model}}>Signup</button>
+  <button type="submit" {{action 'signup'}}>Signup</button>
 </form>
