--- a/app/templates/session/signup.hbs
+++ b/app/templates/session/signup.hbs
@@ -1,3 +1,9 @@
+{{#if message}}
+  <div class="message">
+    {{message}}
+  </div>
+{{/if}}
+
 <form>
   {{input value=username id="username" placeholder="Username"}}
   {{input value=email id="email" placeholder="Email"}}
