connect user login to Parse

--- a/app/styles/_forms.sass
+++ b/app/styles/_forms.sass
@@ -35,3 +35,17 @@ button[type="submit"]
       margin-bottom: $margin
   button
     margin-top: $margin * 2
+
+/******************************************************************************
+ * ALERTS
+ ******************************************************************************/
+
+.message
+  +box()
+  background: white
+  padding: $padding
+  margin-bottom: $padding
+  p
+    font-size: 1em
+    &:first-child
+      margin: 0
