--- a/app/styles/_variables.sass
+++ b/app/styles/_variables.sass
@@ -25,6 +25,13 @@ $row_height: 60px
 /* Borders */
 $border: 1px solid #ccc
 
+/* Regions */
+=box($radius: 3px)
+  background: #fff
+  border: 1px solid #ddd
+  border-radius: $radius
+  box-shadow: 1px 1px 10px #eee
+
 /******************************************************************************
  * BACKGROUNDS
  *****************************************************************************/
