add signup validations

--- a/app/templates/session/signup.hbs
+++ b/app/templates/session/signup.hbs
@@ -7,6 +7,7 @@
 <form>
   {{input value=email id="email" placeholder="Email"}}
   {{input value=password id="password" placeholder="Password"}}
+  {{input value=passwordConfirmation id="password-confirmation" placeholder="Confirm Password"}}
 
   <button type="submit" {{action 'signup'}}>Signup</button>
 </form>
