mixin authentication with routes. create parse authorizer.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,12 @@
   <div class="container">
     {{#link-to 'index'}}<img id="logo" src="assets/logo.png"/>{{/link-to}}
   </div>
+
+  {{#if session.isAuthenticated}}
+    <button {{action 'invalidateSession'}}>Logout</button>
+  {{else}}
+    <button {{action 'authenticateSession'}}>Login</button>
+  {{/if}}
 </header>
 
 <div id="main">
