rename authorizer to authenticator. fix deprecated template 'authenticateSession' route action

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,7 +6,7 @@
   {{#if session.isAuthenticated}}
     <button {{action 'invalidateSession'}}>Logout</button>
   {{else}}
-    <button {{action 'authenticateSession'}}>Login</button>
+    <button {{action 'sessionRequiresAuthentication'}}>Login</button>
   {{/if}}
 </header>
 
