fine tune styling

--- a/app/styles/_variables.sass
+++ b/app/styles/_variables.sass
@@ -18,13 +18,14 @@ $margin: 5px
 /* Widths */
 $sidebar_width: 300px
 $dropdown_width: 150px
-$table_head_height: 40px
+$table_head_height: 46px
 
 /* Heights */
 $row_height: 63px
 
 /* Borders */
 $border: 1px solid #ccc
+$active_border: #777
 
 /* Regions */
 =box($radius: 3px)
