--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -62,6 +62,7 @@ header
       ul
         top: 100%
         left: -$dropdown_width + 30px
+        z-index: 500
         padding: 0
         display: none
         overflow: hidden
@@ -158,7 +159,9 @@ section#patients
     margin-top: $table_head_height
     float: left
     width: $sidebar_width
+    border: 1px solid #e2e2e2
     border-right: 1px solid #ccc
+    border-top: 1px solid #efefef
     background: #efefef
     ul
       list-style: none
@@ -178,9 +181,9 @@ section#patients
           text-shadow: 1px 1px 1px white
           &.active
             background: white
-            border: 1px solid #424242
+            border: 1px solid $active_border
             border-right: none
-            margin: -1px -1px -1px 0
+            margin: -1px
 
   #patients-overview
     overflow: auto
@@ -192,14 +195,15 @@ section#patients
     top: 0
     right: 0
     left: $sidebar_width
-    border: 1px solid #424242
+    border: 1px solid $active_border
     border-top: 0
     background: white
     min-height: 500px
   #view-all.button
     position: absolute
-    top: $margin
+    top: $margin + 1px
     left: $margin
+    padding: 7px
     width: $sidebar_width - ($margin * 2)
 
   table
@@ -243,7 +247,7 @@ section#patients
       th
         border: 1px solid #ccc
         border-top: 0
-        padding: $padding
+        padding: 12px 15px
         &:first-child
           border-left: 0
         &:last-child
