add temporary placeholder graphs image to patients show

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -199,6 +199,9 @@ section#patients
     border-top: 0
     background: white
     min-height: 500px
+    #graphs
+      width: 100%
+      padding: $padding * 2
   #view-all.button
     position: absolute
     top: $margin + 1px
@@ -209,7 +212,6 @@ section#patients
   table
     width: 100%
     border-collapse: collapse
-    margin-bottom: 10px
     thead
       text-align: left
       font-weight: bold
