--- a/app/templates/patients/index/show.hbs
+++ b/app/templates/patients/index/show.hbs
@@ -23,6 +23,8 @@
     </tbody>
   </table>
 
+  <img id="graphs" src="assets/graphs.png"/>
+
 </div>
 
 {{#link-to 'patients.index' id="view-all" class="button"}}View All{{/link-to}}
