--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,12 +6,12 @@
     <ul id="user">
       <li><a id="user-icon"></a>
         <ul>
+          <li><a href="#">Settings</a></li>
           {{#if session.isAuthenticated}}
             <li><a {{action 'invalidateSession'}}>Logout</a></li>
           {{else}}
             <li><a {{action 'sessionRequiresAuthentication'}}>Login</a></li>
           {{/if}}
-          <li><a href="#">Help</a></li>
         </ul>
       </li>
     </ul>
