begin user account edit

--- a/app/styles/_forms.sass
+++ b/app/styles/_forms.sass
@@ -1,14 +1,4 @@
 /******************************************************************************
- * GENERAL *
- ******************************************************************************/
-
-input
-  color: #333
-  outline: none
-  border: $border
-  border-radius: 3px
-
-/******************************************************************************
  * BUTTONS *
  ******************************************************************************/
 
@@ -19,12 +9,26 @@ button[type="submit"]
   background: $nav_button_bg
 
 /******************************************************************************
- * SECTIONS *
+ * GENERAL *
  ******************************************************************************/
 
-/* Login */
+input
+  color: #333
+  outline: none
+  border: $border
+  border-radius: 3px
 
-#session
+/******************************************************************************
+ * LAYOUT *
+ ******************************************************************************/
+
+#edit
+  padding: 10px
+  border: $border
+  overflow: hidden
+  max-width: $sidebar_width
+  border-radius: 4px
+  margin: 10px auto
   input
     width: 100%
     display: block
