--- a/app/templates/session.hbs
+++ b/app/templates/session.hbs
@@ -1,4 +1,4 @@
-<div id="session">
+<div id="edit">
   <div class="tabs">
     {{#link-to 'session.login' id="login"}}Login{{/link-to}}
     {{#link-to 'session.signup' id="signup"}}Signup{{/link-to}}
