--- a/app/templates/session/signup.hbs
+++ b/app/templates/session/signup.hbs
@@ -5,7 +5,9 @@
 {{/if}}
 
 <form>
-  {{input value=email id="email" placeholder="Email"}}
+  {{input value=identification id="identification" placeholder="Email"}}
+  {{input value=firstName id="firstname" placeholder="First name"}}
+  {{input value=lastName id="lastname" placeholder="Last name"}}
   {{input value=password id="password" placeholder="Password"}}
   {{input value=passwordConfirmation id="password-confirmation" placeholder="Confirm Password"}}
 
