--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,8 +6,8 @@
     <ul id="user">
       <li><a id="user-icon"></a>
         <ul>
-          <li><a href="#">Settings</a></li>
           {{#if session.isAuthenticated}}
+            <li>{{#link-to 'account.edit'}}Account{{/link-to}}</li>
             <li><a {{action 'invalidateSession'}}>Logout</a></li>
           {{else}}
             <li><a {{action 'sessionRequiresAuthentication'}}>Login</a></li>
