user edit completed

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -135,6 +135,15 @@ a.button
       font-weight: bold
       background: $action_button_bg
 
+/******************************************************************************
+ * HEADINGS *
+ ******************************************************************************/
+
+h1
+  margin-top: $padding * 2
+  font-size: 1.3em
+  font-weight: normal
+  text-align: center
 
 /******************************************************************************
  * SECTIONS *
