--- a/app/templates/account/edit.hbs
+++ b/app/templates/account/edit.hbs
@@ -1,4 +1,7 @@
+<h1>Edit Account</h1>
+
 <div id="edit">
+
   <form>
     {{input value=model.email id="email" placeholder="Email"}}
     {{input value=model.firstName id="firstname" placeholder="First name"}}
