--- a/app/templates/session/login.hbs
+++ b/app/templates/session/login.hbs
@@ -6,7 +6,7 @@
 
 <form>
   {{input value=identification id="identification" placeholder="Email"}}
-  {{input value=password id="password" placeholder="Password"}}
+  {{input value=password type="password" id="password" placeholder="Password"}}
 
   <button type="submit" {{action 'authenticate'}}>Login</button>
 </form>
