--- a/app/templates/session/signup.hbs
+++ b/app/templates/session/signup.hbs
@@ -8,8 +8,8 @@
   {{input value=identification id="identification" placeholder="Email"}}
   {{input value=firstName id="firstname" placeholder="First name"}}
   {{input value=lastName id="lastname" placeholder="Last name"}}
-  {{input value=password id="password" placeholder="Password"}}
-  {{input value=passwordConfirmation id="password-confirmation" placeholder="Confirm Password"}}
+  {{input value=password type="password" id="password" placeholder="Password"}}
+  {{input value=passwordConfirmation type="password" id="password-confirmation" placeholder="Confirm Password"}}
 
   <button type="submit" {{action 'signup'}}>Signup</button>
 </form>
