--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<header>
+<header id="main">
   <div class="container">
 
     {{#link-to 'index'}}<img id="logo" src="assets/logo.png"/>{{/link-to}}
@@ -19,6 +19,6 @@
   </div>
 </header>
 
-<div id="main">
+<div class="container">
   {{outlet}}
 </div>
