--- a/app/templates/components/area-chart.hbs
+++ b/app/templates/components/area-chart.hbs
@@ -1,7 +1,1 @@
-<section class="area-chart">
-  <header>
-    <h2>{{title}}</h2>
-  </header>
-  <p>{{yield}}</p>
-  <p>...</p>
-</section>
+<!-- SVG rendered here by didInsertElement in area-chart.js -->
