dummy heart rate data

--- a/app/templates/patients/index/show.hbs
+++ b/app/templates/patients/index/show.hbs
@@ -29,6 +29,7 @@
       <section class="area-chart">
         <header>
           <h2>{{chart.title}}</h2>
+          <em class="measurement">{{chart.measurement}}</em>
         </header>
         {{area-chart data=chart.data}}
       </section>
