--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -205,12 +205,29 @@ section#patients
     background: white
     min-height: 500px
     .charts
-      padding: $padding * 2
-      section
-        float: left
+      overflow: auto
+      padding: $padding
+      .column
         width: 50%
-        border: $border
-        border-radius: 10px
+        float: left
+        padding: $padding
+        section
+          border: $border
+          border-radius: 10px
+          header
+            color: #555
+            padding: 1em
+            border-bottom: $border
+            h2
+              margin: 0
+              padding: 0
+              font-size: 1.3em
+              font-weight: normal
+            .measurement
+              color: #999
+              float: right
+              font-size: 1.2em
+              font-style: normal
 
   #view-all.button
     position: absolute
