--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -269,6 +269,7 @@ section#patients
             padding: 0
           .bar
             color: white
+            overflow: hidden
             height: $row_height / 3
             padding: 2px 3px
             background: #EFEFEF
@@ -278,6 +279,11 @@ section#patients
               background: #73BDF4
             &.stress
               background: #88D392
+            em
+              font-style: normal
+              color: white
+            .percent
+              float: right
           // change arrow icons
           &.up:after
             content: '▲'
